# a3json-struct

./: .coveragerc  HISTORY.md  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  requirements.txt  setup.cfg
a3json_struct/: __init__.py  errors.py  json_struct.py  struct.py
a3json_struct/fields/: abstract_field.py  boolean_field.py  char_field.py  date_field.py  datetime_field.py  decimal_field.py  dict_field.py  float_field.py  int_date_field.py  integer_field.py  list_field.py  object_field.py  utils.py
a3json_struct/validators/: __init__.py  abstract_limit_validator.py  max_length_validator.py  max_value_validator.py  min_length_validator.py  min_value_validator.py  regex_validator.py
tests/: test_errors.py  test_json_struct.py
tests/test_fields/: test_abstract_field.py  test_all_fields.py  test_boolean_field.py  test_char_field.py  test_date_field.py  test_datetime_field.py  test_decimal_field.py  test_dict_field.py  test_fields.py  test_float_field.py  test_int_date_field.py  test_integer_field.py  test_list_field.py  test_object_field.py
tests/test_validators/: test_regex_validator.py
